idea/testData/multiplatform/hierarcicalActualization/js/js.kt
package foo

actual class ExpectInCommonActualInPlatforms

actual class ExpectInMiddleActualInPlatforms

expect class <!NO_ACTUAL_FOR_EXPECT!>ExpectInJsWithoutActual<!>

expect class ExpectInJsActualInJs
actual class ExpectInJsActualInJs